--- a/patika odev1/index.html
+++ b/patika odev1/index.html
@@ -20,8 +20,8 @@
     <p>Bu sayfayı <a href="http://patika.dev">patika.dev</a> için yapıyorum. Şuan Front-end alanında kendimi geliştiriyorum. </p>
     <p><a href="http://patika.dev">patika</a>'ya bu eğitim için teşekkür ediyorum.</p>
 
-    <!-------sevdiğim sinamalar burada yer alıyor ------->
-    <h2>Sevdiğim birkaç sinama filmi</h2>
+    <!-------sevdiğim sinemalar burada yer alıyor ------->
+    <h2>Sevdiğim birkaç sinema filmi</h2>
     <ol>
         <li>Aile Şerefi </li>
         <li>Geçmişin Gölgesinde (American History X)</li>
