--- a/patika odev1/index.html
+++ b/patika odev1/index.html
@@ -22,7 +22,7 @@
 
     <!-------sevdiğim sinemalar burada yer alıyor ------->
     <h2>Sevdiğim birkaç sinema filmi</h2>
-    <ol>
+    <ol type="i">
         <li>Aile Şerefi </li>
         <li>Geçmişin Gölgesinde (American History X)</li>
         <li>Hayat Güzeldir (Life Is Beautiful)</li>
