--- a/patika odev3 yemek/index.html
+++ b/patika odev3 yemek/index.html
@@ -85,14 +85,18 @@
             <p>Özleşmesi için biraz dinlendirip servis yapabilirsiniz.</p>
         </li>
     </ol>
-     <p><strong><i>Deneyeceklere afiyet olsun.</i></strong> </p> 
+    <hr>
 </article>
 
 <!-- Musakka Yapılış Start-->
+<article style="margin-left:75%;">
+<p ><strong><i>Deneyeceklere afiyet olsun.</i></strong> </p> 
+</article>
+
     <!-- #Tarif Burada bitiyor -->
-<hr>
-    <footer id="footer1" style="margin-left:35%;">
-    <a href="https://www.nefisyemektarifleri.com/patlican-musakka-yapilisi/">Musakka Tarifini aldığım site</a>
+
+    <footer id="footer1" style="margin-left:75%;">
+    Kaynak : <a href="https://www.nefisyemektarifleri.com/patlican-musakka-yapilisi/">Musakka Tarifini aldığım site</a>
     </footer>
 
     
