--- a/patika odev3 yemek/index.html
+++ b/patika odev3 yemek/index.html
@@ -9,10 +9,10 @@
 <body bgcolor="burlywood" text="saddlebrown" alink="saddlebrown" vlink="saddlebrown" link="saddlebrown">
     <!-- #Tarif Burada başlıyor -->
     <!-- #Başlık -->
-<h1><p ><i>...Patlıcan Musakka Tarifi</i></p></h1>
+<h1><p><i>...Patlıcan Musakka Tarifi</i></p></h1>
     <!-- #Başlık bitiş -->
     <p style="font-style:italic ; color: rebeccapurple;"><strong>sebze yemeklerinin en çok beğenilen ve en çok tercih edilenlerinden bir tanesidir. Kabak, patates, patlıcan gibi sebzelerin kuşbaşı et ya da kıyma ile buluşturulması ile oluşan yemektir. Etli yapıldığı gibi etsiz de yapılmaktadır.. </strong> </p>
-
+    
     <section>
         <p><strong>Tarif : </strong> <a href="#footer1">nefisyemektarifleri</a> </p>
     </section>
@@ -24,10 +24,14 @@
         font-weight: bold;">Hazırlanma Süresi : 20 dakika</span>
         <span style="font-style: italic;
         font-weight: bold;">Pişme Süresi : 1 Saat 15 dakika</span>
+        <hr>
     </article>
-
+<aside style="margin-left:35%;">
+    <img height="200" src="img/patlican-musakka.jpg" alt="Patlıcan"; title="Patlıcan Musakka">
+</aside>
 
 <!-- malzeme başlangıç-->
+
 <article style="margin-left:35%;">
 <h3 style="background-color:crimson; color:azure ; margin-right:50%;" ><i>Malzemeler</i> </h3>
 <ol>
